--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,6 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+buildscript {
+    ext.kotlin_version = '1.9.1' // Replace '1.5.31' with the latest version}
+}
