Complex Scene Understanding works

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.vspecs">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="vspecs"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+    android:icon="@mipmap/ic_launcher"
+    android:label="vspecs"
+    tools:replace="android:icon, android:label">
         <activity
             android:name=".MainActivity"
             android:exported="true"
