--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   camera: ^0.11.0+1
   http: ^1.2.2
   flutter_tts: ^3.8.0
+  permission_handler: ^11.3.1
+  flutter_sound: ^9.16.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
